--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^5.1.0
   date_picker_timeline: ^1.2.5
   sqflite: ^2.2.8+4
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
