--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   date_picker_timeline: ^1.2.5
   sqflite: ^2.2.8+4
   flutter_staggered_animations: ^1.1.1
+  flutter_local_notifications: ^15.1.0+1
+  flutter_native_timezone_updated_gradle: ^2.0.3
 
 dev_dependencies:
   flutter_test:
